Video Editor: Prefetch stops when moving playhead and makes Blender hang on new file. #69924

Closed
opened 2019-09-16 08:47:56 +02:00 by tintwotin · 6 comments

The prefetching cache function stops prefetching, when manually moving the playhead into uncached area of the timeline.
Afterwards selecting File > New or reloading a previous .blend file will make Blender hang.

Add a color strip and extend it to 1000 frames.
Extend range to 1000 frames.
Switch on Prefetching in the Sequencer Preview Sidebar.
While it in the process of caching, move the playhead into an uncached area.
The prefetch stops working.
In the File menu select New/General and Blender hangs until Ctrl+Alt+Del.

Process shown in this gif:
Prefetch3.gif

Operating system: Windows-10-10.0.17763 64 Bits

Broken: version: 2.81 (sub 11), branch: master, commit date: 2019-09-14 14:25, hash: 38cc53a168

The prefetching cache function stops prefetching, when manually moving the playhead into uncached area of the timeline. Afterwards selecting File > New or reloading a previous .blend file will make Blender hang. Add a color strip and extend it to 1000 frames. Extend range to 1000 frames. Switch on Prefetching in the Sequencer Preview Sidebar. While it in the process of caching, move the playhead into an uncached area. The prefetch stops working. In the File menu select New/General and Blender hangs until Ctrl+Alt+Del. Process shown in this gif: ![Prefetch3.gif](https://archive.blender.org/developer/F7750313/Prefetch3.gif) Operating system: Windows-10-10.0.17763 64 Bits Broken: version: 2.81 (sub 11), branch: master, commit date: 2019-09-14 14:25, hash: `38cc53a168`
Author

Added subscriber: @tintwotin

Added subscriber: @tintwotin
Author

Added subscriber: @iss

Added subscriber: @iss
Richard Antalik was assigned by tintwotin 2019-09-18 07:02:17 +02:00
Member

Added subscribers: @Sergey, @lichtwerk

Added subscribers: @Sergey, @lichtwerk
Member

Caused by ab3a9dc1ed.

#70194 (VSE: 'Prefetch frames' causes excessive CPU usage whenever there is animation on a strip (freezes when tweaking animation [Graph Editor, Dopesheet, typing in new values])) is in the same ballpark...

Adding this to 2.81 milestone, if this cant be fixed until then it should probably be reverted?

CC @Sergey

Caused by ab3a9dc1ed. #70194 (VSE: 'Prefetch frames' causes excessive CPU usage whenever there is animation on a strip (freezes when tweaking animation [Graph Editor, Dopesheet, typing in new values])) is in the same ballpark... Adding this to 2.81 milestone, if this cant be fixed until then it should probably be reverted? CC @Sergey

This issue was referenced by 2b29bf25fc

This issue was referenced by 2b29bf25fcaa22812a4656c2f4243c037b6b2bb2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Thomas Dinges added this to the 2.81 milestone 2023-02-08 16:46:57 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69924
No description provided.